--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,313 @@
-.App {
-  text-align: center;
+
+.hero{
+  margin-bottom: 7%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.text_serv a{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logoimg{
+  width: 150px;
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.order{
+  width: 100%;
+  background-color: #050538;
+  color: white;
+  margin-bottom: 4%;
+  height: 200px;
+}
+.social_icon{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 4%;
+  margin-top: 4%;
+}
+
+.facebook_icon , .whats_icon , .insta_icon{
+  background-color: orange;
+  padding: 20px;
+  border-radius: 50%;
+  margin-left: 10px;
+  font-size: 1.3rem;
+}
+
+.facebook_icon , .whats_icon , .insta_icon:hover{
+  
+  cursor: pointer;
+
+}
+.order_request{
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+  align-items: center;
+
+  @media screen and (max-width:700px){
+    display: block;
+    justify-content: space-around;
+    
+}
+}
+.clientsSection{
+  width: 100%;
+  
+  padding: 20px;
+
+  @media screen and (max-width:700px){
+    
+   margin: auto;
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+    width: 100%;
+    
+}
+}
+
+.content{
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  padding: 10px;
+  transform: scale(1.1);
+
+  @media screen and (max-width:700px){
+    
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    border-top: solid;
+    margin-bottom: 8%;
+     width: 100%;
+     
+ }
+}
+.content:hover{
+  background-color: black;
+  cursor: pointer;
+  transition: 1s;
+  color: white;
+}
+.content img{
+  margin-bottom: 10px;
+}
+
+.ex{
+  width: 30%;
+  @media screen and (max-width:700px){
+    display: block;
+    justify-content: space-around;
+    width: 100%;
+}
+}
+.ex img{
+  @media screen and (max-width:700px){
+    
+   
+    width: 100%;
+}
+
+}
+.data_sectioon{
+  width: 70%;
+
+  @media screen and (max-width:700px){
+    
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+     background-color: black;
+     width: 100%;
+     
+     
+ }
+}
+.clients_content{
+  display: flex;
+ padding: 20px;
+ justify-content: space-between;
+
+ @media screen and (max-width:700px){
+    
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+   
+   width: 100%;
+   
+}
+}
+.First_row{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  margin-left: 30px;
+  
+  align-items: center;
+  width: 100%;
+  margin-bottom: 7%;
+
+
+  @media screen and (max-width:700px){
+    
+    margin: auto;
+    
+    display: flex;
+    flex-direction: column;
+     
+     width: 100%;
+     
+ }
+}
+
+.order_request .link_whats{
+
+background-color: green;
+border-radius: 100%;
+padding: 20px;
+width: 150px;
+
+text-align: center;
+
+
+
+}
+
+.Static_content{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  
+  z-index: 100%;
+}
+
+.hero_content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+  
+}
+.phoneIcon{
+  background-color: orange;
+  border-radius: 100%;
+  padding: 20px;
+  text-align: center;
+  width: 100px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  
+
+
+}
+.whatsIcon{
+  
+  
+background-color: green;
+border-radius: 100%;
+padding: 20px;
+width: 100px;
+
+text-align: center;
+
+
+}
+
+.whatsIcon .iconSttic{
+  color: white;
+  font-size: 3rem;
+}
+.phonelogoicon{
+  color: white;
+  
+}
+
+.link_whats .icon{
+    font-size: 60px;
+}
+
+.link_whats a{
+  color: white;
+  font-size: 1.3rem;
+  text-decoration: none;
+}
+
+.order_request .link_phone{
+  background-color: white;
+  
+  border-radius: 100%;
+  padding: 20px;
+  width: 150px;
+  
+  text-align: center;
+  
+
+}
+
+.logoimg{
+  width: 150px;
+  height: 80px;
+}
+
+.phonelogo{
+  font-size: 8
+  0px;
+}
+
+
+
+.link_phone a{
+  color: orange;
+    text-decoration: none;
+    font-size: 1.3rem;
+}
+
+.order_content{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  width: 100%;
+}
+
+.order_text{
+  width: 50%;
+}
+.Footer{
+  
+  background-color: #050538;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  
+  height: 400px;
+}
+
+.links{
+  color: white;
+  display: flex;
+  justify-content: space-between;
+}
+
+.links a{
+  color: white;
+  text-decoration: none;
+}
+
+.link{
+  color: white;
+  font-size: 1.5rem;
+  
 }
